--- a/self4.html
+++ b/self4.html
@@ -11,6 +11,8 @@
     vesion 2 ..
     version 3 ..
     version 4 ..
-    version 5
+    version 5 ..
+    version 6 ..
+    version 7
   </body>
 </html>
