--- a/self4.html
+++ b/self4.html
@@ -10,7 +10,7 @@
     self4 ..
     vesion 2 ..
     version 3 ..
-    version 4 ..
+    <!-- nonono -->
     version 5 ..
     vesrion 6 ..
     version 7
