--- a/self4.html
+++ b/self4.html
@@ -10,6 +10,10 @@
     self4 ..
     vesion 2 ..
     version 3 ..
-    
+    version 4 ..
+    version 5 ..
+    version 6 ..
+    version 7 ..
+
   </body>
 </html>
