--- a/self4.html
+++ b/self4.html
@@ -7,11 +7,6 @@
     </title>
   </head>
   <body>
-    self4 ..
-    vesion 2 ..
-    version 3 ..
-    version 6 ..
-    version 7 ..
-
+    version
   </body>
 </html>
